Started developing the script without jQuery.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-8">
                 <button id="reset" type="submit" class="btn btn-default">Сброс</button>
-                <button id="submit" type="submit" class="btn btn-success">Расчитать</button>
+                <button id="submit" type="button" class="btn btn-success">Расчитать</button>
             </div>
         </div>
     </form>
